# mrs_optic_flow

./: .gitmodules  CHANGELOG.rst  CMakeLists.txt  ChangeLog.txt  README.md  install.sh  optic_flow.xml  package.xml  plugins.xml
.ci/: ci_before_install.sh  install.sh
cl/: FftMethod.cl
config/: cam_rot.yaml  default.yaml  physical_constraints.yaml  pig.yaml  simulation.yaml  uav.yaml  uav10.yaml  uav10_oversim.yaml  uav5.yaml
config/old/: bluefox_pig_07_05_19.yaml  bluefox_simulation.yaml  ost.yaml
include/: BlockMethod.h  FastSpacedBMMethod_OCL.h  FastSpacedBMOptFlow.h  FftMethod.h  OpticFlowCalc.h  scaleRotationEstimator.h  utilityFunctions.h
include/mrs_optic_flow/: BlockMethod.h  FastSpacedBMMethod_OCL.h  FftMethod.h  OpticFlowCalc.h  utilityFunctions.h
include/optic_flow/: BlockMethod.h  FastSpacedBMMethod_OCL.h  FastSpacedBMOptFlow.h  FftMethod.h  OpticFlowCalc.h  scaleRotationEstimator.h  utilityFunctions.h
install/: install_intel.sh
launch/: depth_compensation.launch  launch_with_bluefox.launch  optic_flow.launch  optic_flow_bag.launch  pig.launch  rosbag.launch  run_from_rosbag.launch  simulation.launch  simulation_nodelet_cpu.launch  simulation_nodelet_gpu.launch  uav.launch  uav10.launch  uav10_dark.launch  uav10_outdoor.launch  uav10_oversim.launch  uav10_rosbag.launch  uav10_standalone.launch  uav10_vis.launch  uav5.launch  uav5_dark.launch  uav5_outdoor.launch  uav_old.launch
launch/old_launchers/: allsac_tuning.launch  gaz_of_fft.launch  gaz_of_ocl.launch  run_from_rosbag.launch  test.launch  uav_old.launch  virtual.launch  virtual_tilt_test.launch
matlab/: DisplayOptFlowResults.m  EvalBag.m  GetRotation.m  RotationEstimate.m
matlab/thomas_scripts/: DisplayOptFlowResults.m
msg/: States.msg
scripts/: install_intel.sh
src/: .directory  BlockMethod.cpp  FastSpacedBMMethod.cl  FastSpacedBMMethod_OCL.cpp  FftMethod.cl  FftMethod.cpp  optic_flow.cpp  scaleRotationEstimator.cpp  utilityFunctions.cpp
yaml/: bluefox_uav5_as_of_26-4.yaml  cam_uav5.yaml  ost_old.yaml  physical_constraints.yaml
