<?xml version="1.0"?>
<package format="2">

  <name>mrs_optic_flow</name>
  <version>0.0.5</version>
  <description>The optic_flow package</description>

  <author email="viktor.walter@fel.cvut.cz">Viktor Walter</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>mrs_lib</depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
